# slpredictions

./: .gitignore  =0.1.1  README.md  pyproject.toml
src/slpredictions/: __init__.py  __main__.py  data.py
src/slpredictions/apicache.dat/: cache.db
src/slpredictions/tools/: __init__.py  data.py  sldk_api.py  transfermarkt_values.py
