[project]
name = "slpredictions"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tobias Schnack", email = "tobias.schnack@gmail.com" }
]
dependencies = [
    "pandas>=2.2.1",
    "requests>=2.31.0",
    "pymc>=5.12.0",
    "duckdb>=0.10.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"slpredictions" = "slpredictions:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slpredictions"]
